# codebones

./: .gitignore  Cargo.toml  README.md  codebones.db  test_codebones.py
.cursor/rules/: strict-approval.mdc
.github/workflows/: release-python.yml  release-rust.yml  test.yml
crates/cli/: Cargo.toml  codebones.db
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  cache.rs  indexer.rs  lib.rs  parser.rs  plugin.rs
crates/mcp/: Cargo.toml  test  test.rs
crates/mcp/src/: main.rs
crates/mcp/tests/: mcp_tests.rs
crates/python-ext/: Cargo.toml  codebones.db  pyproject.toml
crates/python-ext/src/: lib.rs
crates/python-ext/tests/: python_tests.rs
docs/: PHASE_2_CACHE.md  PHASE_3_PARSER.md  PHASE_4_PLUGINS.md  PHASE_5_INTERFACES.md  PLAN_EXECUTION.md  PLUGIN_AUTHORING_GUIDE.md  RESEARCH_AIDER_REPOMAP.md  RESEARCH_MCP_RUST.md  RESEARCH_REPO_MAPS.md  SPEC_ARCHITECTURE.md  SPEC_CICD.md  SPEC_LANGUAGE_EXPANSION.md  SPEC_OBJECTIVE_AND_UX.md  benchmark_results.txt
docs/benchmarks/: README.md  correctness-2026-03-15.csv  feature-matrix.csv  methodology.md  normalized-2026-03-15.csv  raw-2026-03-15.csv  results-2026-03-15.md
