[package]
name = "codebones"
version = "0.2.0"
edition = "2021"
description = "An AST-aware code indexing and AI context extraction tool"
license = "MIT"
repository = "https://github.com/creynir/codebones"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
codebones-core = { path = "../core", version = "0.2.0" }

[[bin]]
name = "codebones"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
