[package]
name = "codebones-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
sha2 = "0.10"
camino = "1.1"
thiserror = "1.0"
hex = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tree-sitter = "0.26.6"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"

[dev-dependencies]
tempfile = "3.8"
