[package]
name = "codebones-core"
version = "0.1.6"
edition = "2021"
description = "Core library for codebones: an AST-aware code indexing and context extraction tool"
license = "MIT"
repository = "https://github.com/creynir/codebones"

[dependencies]
ignore = "0.4"
sha2 = "0.10"
camino = "1.1"
thiserror = "1.0"
hex = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tree-sitter = "0.26.6"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
anyhow = "1.0.102"
tiktoken-rs = "0.5.9"
tree-sitter-go = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.6.0"

[dev-dependencies]
tempfile = "3.8"
