[package]
name = "codebones-mcp"
version = "0.1.3"
edition = "2021"
description = "MCP server for codebones: an AST-aware code indexing and context extraction tool"
license = "MIT"
repository = "https://github.com/creynir/codebones"

[dependencies]
anyhow = "1.0.102"
codebones-core = { path = "../core", version = "0.1.3" }
rmcp = "1.2.0"
tokio = { version = "1.50.0", features = ["full"] }
