[package]
name = "codebones-python-ext"
version = "0.1.3"
edition = "2021"
description = "Python bindings for codebones"
license = "MIT"
repository = "https://github.com/creynir/codebones"

[lib]
name = "codebones_python_ext"
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
codebones-core = { path = "../core", version = "0.1.3" }
pyo3 = { version = "0.28.2", features = ["abi3-py310"] }

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
