[package]
name = "codebones-python-ext"
version = "0.2.0"
edition = "2021"
description = "Python bindings for codebones"
license = "MIT"
repository = "https://github.com/creynir/codebones"

[[bin]]
name = "codebones"
path = "../cli/src/main.rs"

[[bin]]
name = "codebones-mcp"
path = "../mcp/src/main.rs"

[dependencies]
codebones-core = { path = "../core", version = "0.2.0" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
rmcp = "1.2.0"
anyhow = "1.0.102"

